# Scalable-remote-attestation-of-IoT-swarm-using-IOTA-

./: README.md  network.bash  network_start.bash
bash_seperate/: network_build.bash  network_execute.bash  network_start_build.bash  network_start_execute.bash
project/author/: clear_author.bash
project/author/announce/code/: main.c
project/author/keyload/code/: main.c
project/author/send_message/code/: CMakeLists.txt  main.c
project/subscriber/: clear_subscriber.bash
project/subscriber/subscriber_keyload/code/: main.c
project/subscriber/subscriber_operation/code/: CMakeLists.txt  main.c
project/subscriber/subscriber_subscribe/code/: main.c
